--- a/html5+css3+h5/ECharts/css/index.less
+++ b/html5+css3+h5/ECharts/css/index.less
@@ -183,7 +183,7 @@ header {
       background-size: 100%;
       opacity: .3;
     }
-    .map-animation {
+    .map-rotate1 {
       position: absolute;
       top: 50%;
       left: 50%;
@@ -192,6 +192,36 @@ header {
       height: 10.046875rem;
       background: url(../images/lbx.png);
       background-size: 100%;
+      animation: rotate1 30s linear infinite;
+      opacity: .6;
+    }
+    .map-rotate2 {
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      width: 8.84375rem;
+      height: 8.84375rem;
+      background: url(../images/jt.png);
+      background-size: 100%;
+      animation: rotate2 10s linear infinite;
+      opacity: .6;
+    }
+    @keyframes rotate1 {
+      from1 {
+        transform: translate(-50%, -50%) rotate(0deg);
+      }
+      to {
+        transform: translate(-50%, -50%) rotate(360deg);
+      }
+    }
+    @keyframes rotate2 {
+      from {
+        transform: translate(-50%, -50%) rotate(0deg);
+      }
+      to {
+        transform: translate(-50%, -50%) rotate(-360deg);
+      }
     }
   }
 }
