--- a/vue/prototype/src/index.css
+++ b/vue/prototype/src/index.css
@@ -1,6 +1,7 @@
 * {
   margin: 0;
   padding: 0;
+  font-family:'Courier New', Courier, monospace;
 }
 
 
@@ -10,9 +11,9 @@
   padding: 20px 50px;
 }
 .pre {
-  width: 600px;
-  height: 300px;
-  overflow: scroll;
+  /* width: 800px; */
+  height: 600px;
+  /* overflow: scroll; */
 }
 .child {
   text-indent: 1em;
