--- a/React/mars-ui/src/styles/index.scss
+++ b/React/mars-ui/src/styles/index.scss
@@ -1,6 +1,3 @@
 
-// @import './variables';
-// @import './normalize.scss';
-body {
-  margin: 0;
-}
+@import './_variables.scss';
+@import './normalize.scss';
