--- a/React/mars-ui/src/styles/_variables.scss
+++ b/React/mars-ui/src/styles/_variables.scss
@@ -99,6 +99,8 @@ $btn-border-width:            $border-width !default;
 $btn-link-disabled-color:     $gray-6 !default;
 $btn-disabled-opacity:        .65 !default;
 
+$border-radius: 4px;
+
 // Options
 //
 // Quickly modify global styling by enabling or disabling optional features.
