--- a/React/mars-ui/src/components/Button/_style.scss
+++ b/React/mars-ui/src/components/Button/_style.scss
@@ -10,6 +10,9 @@
   user-select: none;
   background-color: transparent;
   border: $btn-border-width solid transparent;
+  border-radius: 8px;
+  margin: 0 10px;
+  padding: 10px 8px;
   &:hover {
     color: $body-color;
   }
@@ -21,5 +24,18 @@
     pointer-events: none;
     opacity: $btn-disabled-opacity;
     cursor: not-allowed;
+  }
+  &.btn-primary {
+    color: $white;
+    background-color: $primary;
+  }
+  &.btn-default {
+    color: $black;
+    background-color: $white;
+    border: $border-width solid $gray-4;
+  }
+  &.btn-danger {
+    color: $danger;
+    border: $border-width solid $danger;
   }
 }
