--- a/node/express-demo/view/index.html
+++ b/node/express-demo/view/index.html
@@ -11,5 +11,10 @@
   <div class="express">
     <h1>Hello Express</h1>
   </div>
+  <form action="/user/add" method="post">
+    <input type="text" name="name" placeholder="name">
+    <input type="text" name="age" placeholder="age">
+    <input type="submit" value="submit">
+  </form>
 </body>
 </html>
